unpackaged/main/default/objects/RAID__c/RAID__c.object-meta.xml
<CustomObject>
    <description>This is created as part of REQ-2739 for cloud coach</description>
    <label>RAID</label>
    <nameField>
        <displayFormat>RAID-{0000}</displayFormat>
        <label>RAID ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAIDS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>