unpackaged/main/default/objects/RAID__c/fields/Action_done__c.field-meta.xml
<CustomField>
    <fullName>Action_done__c</fullName>
    <description>Details for the actions that were performed</description>
    <label>Action done</label>
    <length>255</length>
    <type>Text</type>
</CustomField>