unpackaged/main/default/objects/RAID__c/fields/Additional_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Decision_Makers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Decision Makers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Stakeholder_Contact__c.project_cloud__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cloud_Coach_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Stakeholder_Contact__c</referenceTo>
    <relationshipLabel>RAIDS</relationshipLabel>
    <relationshipName>RAIDS</relationshipName>
    <type>Lookup</type>
</CustomField>