unpackaged/main/default/objects/RAID__c/fields/Assigned_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for Onboarding</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RAIDS (Customer Contact for Onboarding)</relationshipLabel>
    <relationshipName>RAIDS1</relationshipName>
    <type>Lookup</type>
</CustomField>