unpackaged/main/default/objects/RAID__c/fields/Closed_RFI_Detail__c.field-meta.xml
<CustomField>
    <fullName>Closed_RFI_Detail__c</fullName>
    <label>Closed RFI Items</label>
    <summaryFilterItems>
        <field>RFI_Detail__c.RFI_Item_Status__c</field>
        <operation>equals</operation>
        <value>Closed, Canceled, Cannot Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>RFI_Detail__c.RAID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>