unpackaged/main/default/objects/RAID__c/fields/Cloud_Coach_Project__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Coach_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked relationships to Cloud Coach projects (internal only)</description>
    <label>Cloud Coach Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>RAIDS</relationshipLabel>
    <relationshipName>RAIDS</relationshipName>
    <type>Lookup</type>
</CustomField>