unpackaged/main/default/objects/RAID__c/fields/CompletedRFICategories__c.field-meta.xml
<CustomField>
    <fullName>CompletedRFICategories__c</fullName>
    <label>CompletedRFICategories</label>
    <summaryFilterItems>
        <field>RFI_Detail__c.RFI_Item_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>RFI_Detail__c.RAID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>