unpackaged/main/default/objects/RAID__c/fields/CRM_Project__c.field-meta.xml
<CustomField>
    <fullName>CRM_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked relationships to projects</description>
    <label>CRM Project</label>
    <referenceTo>CRM_Project__c</referenceTo>
    <relationshipLabel>RAIDS</relationshipLabel>
    <relationshipName>RAIDS</relationshipName>
    <type>Lookup</type>
</CustomField>