unpackaged/main/default/objects/RAID__c/fields/Expected_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resolution_Date__c</fullName>
    <description>deadline</description>
    <label>Expected Resolution Date</label>
    <type>DateTime</type>
</CustomField>