unpackaged/main/default/objects/RAID__c/fields/External_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer contacts</description>
    <label>External Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RAIDS</relationshipLabel>
    <relationshipName>RAIDS</relationshipName>
    <type>Lookup</type>
</CustomField>