unpackaged/main/default/objects/RAID__c/fields/Internal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System users</description>
    <label>Internal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Raids</relationshipName>
    <type>Lookup</type>
</CustomField>