unpackaged/main/default/objects/RAID__c/fields/Manual_Submission_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Manual_Submission_DateTime__c</fullName>
    <label>Manual Submission DateTime</label>
    <type>DateTime</type>
</CustomField>