unpackaged/main/default/objects/RAID__c/fields/Percentage_of_closed_RFI_Details__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_closed_RFI_Details__c</fullName>
    <formula>( Closed_RFI_Detail__c / Total_RFI_Details__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Item Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>