unpackaged/main/default/objects/RAID__c/fields/percentOfCompletedRFICategories__c.field-meta.xml
<CustomField>
    <fullName>percentOfCompletedRFICategories__c</fullName>
    <formula>( CompletedRFICategories__c / TotalRFICategories__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of closed RFIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>