unpackaged/main/default/objects/RAID__c/fields/Related_RAID__c.field-meta.xml
<CustomField>
    <fullName>Related_RAID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related RAID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RAID__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RAID__c</referenceTo>
    <relationshipLabel>RAIDS(Related RAID)</relationshipLabel>
    <relationshipName>RAIDS</relationshipName>
    <type>Lookup</type>
</CustomField>