unpackaged/main/default/objects/RAID__c/fields/Risk_Contingency_plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Contingency_plan__c</fullName>
    <description>Details about the approach to manage a realized risk</description>
    <label>Risk Contingency plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>