unpackaged/main/default/objects/RAID__c/fields/Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>Risk_Details__c</fullName>
    <description>Details and notes about the captured risk</description>
    <label>Risk Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>