unpackaged/main/default/objects/RAID__c/fields/Risk_Management_plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_plan__c</fullName>
    <description>Details about the approach to be used for managing of the risk.</description>
    <label>Risk Management plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>