unpackaged/main/default/objects/RAID__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFI_Sub_Type</valueSetName>
    </valueSet>
</CustomField>