unpackaged/main/default/objects/RAID__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>RAID short text</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>