unpackaged/main/default/objects/RAID__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>RAID type for categorization</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>