unpackaged/main/default/objects/RAID__c/recordTypes/RFI.recordType-meta.xml
<RecordType>
    <fullName>RFI</fullName>
    <active>true</active>
    <label>RFI</label>
</RecordType>