unpackaged/main/default/objects/RAID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Additional_Decision_Makers__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>